--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:id="@+id/festOperandET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/keycol"
             android:layout_marginRight="8pt"
             android:layout_weight="1"
             />
@@ -40,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="8pt"
+            android:textColor="@color/keycol"
             android:layout_weight="1"
             />
 
@@ -62,6 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="+"
+            android:textColor="@color/keycol"
+            android:backgroundTint="@color/baton"
             android:textSize="22sp"
             />
         <Button
@@ -70,6 +74,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="-"
+            android:textColor="@color/keycol"
+            android:backgroundTint="@color/baton"
             android:textSize="22sp"
             />
 
@@ -83,6 +89,7 @@
         android:layout_marginStart="16dp"
         android:gravity="center_horizontal"
         android:text="Результат"
+        android:textColor="@color/keycol"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,37 +99,7 @@
 
         />
 
-    <LinearLayout
-        android:id="@+id/LinearLayoutResetExit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="8sp"
-        android:layout_marginRight="8pt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultTV"
-        app:layout_constraintVertical_bias="0.1">
-        <Button
-            android:id="@+id/buttonResetBTN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Reset"
-            android:textSize="22sp"
-            />
-        <Button
-            android:id="@+id/buttonExitBTN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Exit"
-            android:textSize="22sp"
-            />
 
-
-    </LinearLayout>
 
 
 
